# fastapi_zero

./: .coverage  .gitignore  README.md  database.db  pyproject.toml
fastapi_zero/: app.py
migrations/: env.py
migrations/versions/: 5ef7de0a1a47_create_users_table.py  8dba2717c73a_add_updated_at_column.py
tests/: conftest.py  test_app.py
